--- a/src/Home.css
+++ b/src/Home.css
@@ -33,7 +33,8 @@ body {
   background-color: #222;
   position: absolute;
   inset: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* This is just to transition when you change the viewport size. */
@@ -76,7 +77,8 @@ body {
   background-color: #222;
   position: absolute;
   inset: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* This is just to transition when you change the viewport size. */
